# Golb

./: package-lock.json  package.json
ai/: prompts.ts
convex/: auth.config.ts  auth.ts  convex.config.ts  course.ts  emails.ts  firecrawl.ts  flashcard.ts  leaderboard.ts  schema.ts  userSettings.ts  workflow.ts
convex/_generated/: api.d.ts
src/: env.ts
src/app/: layout.tsx
src/app/(app)/: layout.tsx
src/app/(app)/(app-header)/: layout.tsx
src/app/(app)/(app-header)/flashcards/: page.tsx
src/app/(app)/(app-header)/home/: page.client.tsx  page.tsx
src/app/(app)/(app-header)/profile/: page.tsx
src/app/(app)/course/: layout.tsx
src/app/(app)/course/[courseId]/: page.client.tsx  page.tsx
src/app/(app)/flashcard/[flascardId]/: page.tsx
src/app/(app)/learn/: page.client.tsx  page.tsx
src/app/(marketing)/: layout.tsx  page.tsx
src/app/api/answer/: route.ts
src/components/: app-header.tsx  course-card.tsx  empty-state.tsx  file-upload.tsx  flashcard-card.tsx  icons.tsx  leaderboard-item.tsx  markdown-renderer.tsx  providers.tsx  sign-in.tsx  sign-up.tsx  streaks-leaderboard-sidebar.tsx  user-menu.tsx
src/components/marketing/: footer.tsx  header.tsx  hero.tsx
src/components/motion/: animated-hero-decor.tsx  animated-list.tsx  animated-number.tsx  animated-title.tsx
src/components/ui/: accordion.tsx  button.tsx  calendar.tsx  context-menu.tsx  fancy-button.tsx  menubar.tsx  radio-group.tsx  resizable.tsx  slider.tsx  stepper.tsx  switch.tsx
src/lib/: auth-client.ts  auth-server.ts
video-generator/: main.py  pyproject.toml
(+2 files in other folders)
